--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "ecommerce",
+	"author": "Grégoire Masse",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -31,18 +32,11 @@
 		"env": {
 			"node": true
 		},
-		"extends": [
-			"plugin:vue/essential",
-			"eslint:recommended"
-		],
+		"extends": [ "plugin:vue/essential", "eslint:recommended" ],
 		"parserOptions": {
 			"parser": "babel-eslint"
 		},
 		"rules": {}
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not dead"
-	]
+	"browserslist": [ "> 1%", "last 2 versions", "not dead" ]
 }
